--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 	<body>
-		<span style="backgrond-color: red;">span1</span>
-		<span style="backgrond-color: blue;">span2</span>
-		<span style="backgrond-color: green;">span3</span>
+		<span style="background-color: red;">span1</span>
+		<span style="background-color: blue;">span2</span>
+		<span style="background-color: green;">span3</span>
 		<ol>
 			<li>목록1</li>
 			<li>목록2</li>
