--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
 <html>
-	<body>
-		<span style="background-color: red;">span1</span>
-		<span style="background-color: blue;">span2</span>
-		<span style="background-color: green;">span3</span>
-		<ul>
-			<li>목록1</li>
-			<li>목록2</li>
-		</ul>
-	<body>
+	<haed>
+		<title>2학년 4반 2022년 3월 31일 수업</title>
+	<head>
 <html>
