--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
-	<haed>
-		<title>2학년 4반 2022년 3월 31일 수업</title>
-		
-		
-		
-		
 	<head>
-<html>
+		<title>네트워크보안솔루션과 2학년</title>
+	</head>
+	<body>
+		<ul>
+			<li>2학년 4반</li>
+			<li>2학년 5반</li>
+		</ul>
+	</body>
+</html>
